--- a/ToolWidget.ui
+++ b/ToolWidget.ui
@@ -15,19 +15,19 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
-    <number>5</number>
+    <number>3</number>
    </property>
    <property name="leftMargin">
-    <number>5</number>
+    <number>3</number>
    </property>
    <property name="topMargin">
-    <number>5</number>
+    <number>3</number>
    </property>
    <property name="rightMargin">
-    <number>5</number>
+    <number>3</number>
    </property>
    <property name="bottomMargin">
-    <number>5</number>
+    <number>3</number>
    </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
@@ -36,19 +36,19 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
-       <number>5</number>
+       <number>3</number>
       </property>
       <property name="leftMargin">
-       <number>5</number>
+       <number>3</number>
       </property>
       <property name="topMargin">
-       <number>5</number>
+       <number>3</number>
       </property>
       <property name="rightMargin">
-       <number>5</number>
+       <number>3</number>
       </property>
       <property name="bottomMargin">
-       <number>5</number>
+       <number>3</number>
       </property>
       <item>
        <widget class="QRadioButton" name="radioButtonNoProcessing">
@@ -120,6 +120,9 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
