--- a/PreprocessorParamsWidget.ui
+++ b/PreprocessorParamsWidget.ui
@@ -47,7 +47,7 @@
      <property name="title">
       <string/>
      </property>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget4">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -103,7 +103,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget5">
       <property name="geometry">
        <rect>
         <x>130</x>
@@ -177,7 +177,7 @@
      <property name="title">
       <string/>
      </property>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget6">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -231,7 +231,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget7">
       <property name="geometry">
        <rect>
         <x>120</x>
@@ -306,7 +306,7 @@
      <property name="title">
       <string/>
      </property>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget8">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -349,7 +349,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget9">
       <property name="geometry">
        <rect>
         <x>110</x>
