--- a/EllipseFitterParamsWidget.ui
+++ b/EllipseFitterParamsWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RecognizerParamsWidget</class>
- <widget class="QWidget" name="RecognizerParamsWidget">
+ <class>EllipseFitterParamsWidget</class>
+ <widget class="QWidget" name="EllipseFitterParamsWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
