--- a/ToolWidget.ui
+++ b/ToolWidget.ui
@@ -117,6 +117,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButtonLoadTaglist">
+       <property name="text">
+        <string>load taglist...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
